# flowstate

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  flowstate.toml  hatch_build.py  pyproject.toml  specs-scheduling-parallelism.md  specs.md
.claude/: AGENT_TEMPLATE.md  project.configured
.claude/agents/: dsl-dev.md  engine-dev.md  evaluator.md  server-dev.md  spec-writer.md  sprint-planner.md  state-dev.md  ui-dev.md
agents/: 01-dsl.md  02-state.md  03-engine.md  04-server.md  05-ui.md
demo/: run_demo.py
desktop/: .gitignore  README.md
desktop/scripts/: build.sh  generate_tray_icons.py  install.sh  vendor_python.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: health.rs  main.rs  menu.rs  picker.html  picker.rs  project.rs  server.rs
desktop/updater/: latest.json.example
flows/: agent_delegation.flow  discuss_flowstate.flow  e2e_linear.flow  implement_flowstate.flow  lumon_flat_off.flow  lumon_flat_on.flow  sandbox_alias.flow
issues/: PLAN.md  TEMPLATE.md
issues/dsl/: 001-grammar.md  002-parser.md  003-type-checker-structural.md  004-type-checker-edges.md  005-type-checker-cycles.md  006-type-checker-forkjoin.md  007-judge-parameter.md  008-sandbox-dsl-attributes.md  009-wait-fence-atomic-nodes.md  010-files-edge-timing.md  011-harness-attribute.md  012-tasks-attribute.md  013-rename-tasks-to-subtasks.md  014-lumon-dsl-attributes.md  015-agent-attribute.md  016-lumon-config-block.md  017-worktree-persist-attribute.md
issues/e2e/: 001-mock-subprocess.md  002-fixture-infrastructure.md  002-unit-test-gen-flow.md  003-test-flow-library.md  004-test-start-run.md  005-test-run-detail.md  006-test-flow-controls.md  007-test-failed-task.md  008-test-fork-join.md  009-test-conditional.md  010-test-file-watcher.md  011-test-cycles.md  012-test-budget.md  013-test-websocket-reconnect.md  014-test-sidebar-navigation.md  015-sandbox-e2e-test-suite.md
issues/engine/: 001-subprocess-manager.md  002-budget-guard.md  003-context-assembly.md  004-judge-protocol.md  005-executor-linear.md  006-executor-forkjoin.md  007-executor-conditional.md  008-executor-control.md  008-subprocess-watchdog.md  009-event-system.md  010-edge-delays.md  011-recurring-flows.md  012-file-communication.md  013-orchestrator-prompt.md  014-orchestrator-session.md  015-orchestrator-executor.md  016-orchestrator-judge.md  017-cancel-triggers-on-error.md  018-resume-not-working.md  019-sdk-runner.md  020-replace-subprocess-mgr.md  021-remove-orchestrator.md  022-update-engine-tests.md  023-self-report-routing.md  024-executor-activity-log.md  025-workspace-isolation.md  026-auto-workspace.md  029-cross-flow-input-mapping.md  030-wait-node-execution.md  031-fence-barrier.md  032-atomic-mutex.md  033-harness-protocol.md  034-acp-harness.md  035-subprocess-stdin-interaction.md  036-acp-stop-resume-messaging.md  037-remove-subprocess-manager.md  038-retry-task-not-resuming.md  040-task-management-instructions.md  041-harden-subtask-error-handling.md  042-rename-tasks-to-subtasks.md  (+46 more)
issues/evals/: DSL-008-eval.md  DSL-015-eval.md  DSL-016-eval.md  DSL-017-eval.md  ENGINE-054-eval.md  ENGINE-055-eval.md  ENGINE-056-eval.md  ENGINE-057-eval.md  ENGINE-058-eval.md  ENGINE-059-eval.md  ENGINE-060-eval.md  ENGINE-063-eval.md  ENGINE-084-eval.md  ENGINE-086-eval.md  ENGINE-087-eval.md  ENGINE-088-eval.md  SERVER-020-eval.md  SERVER-033-eval.md  SHARED-012-eval.md  STATE-013-eval.md  UI-055-eval.md  UI-056-eval.md  UI-057-eval.md  UI-058-eval.md  UI-060-eval.md  UI-061-eval.md  UI-062-eval.md  UI-063-eval.md  UI-064-eval.md  UI-072-eval.md  phase20-visual-eval.md  sprint-phase-31-1-eval.md  sprint-phase-31-2-eval.md  sprint-phase-31-3-eval.md  sprint-phase-32-eval.md
issues/server/: 001-app-config.md  002-flow-discovery.md  003-run-management.md  004-logs-schedules.md  005-websocket-hub.md  006-file-watcher-events.md  007-cli.md  008-static-files.md  009-integration-test.md  010-update-run-manager.md  012-task-scheduling-api.md  013-harness-config-wiring.md  014-user-input-endpoint.md  015-subtask-api.md  016-task-rerun-endpoint.md  017-run-results-endpoint.md  018-retry-skip-no-active-executor.md  019-fix-cli-port-override-config.md  020-sandbox-preflight-validation.md  021-lumon-api-exposure.md  022-artifact-api-endpoints.md  023-embedded-server-cli-run.md  024-remove-sandbox-server-code.md  025-lumon-api-exposure.md  026-config-loader-project-resolution.md  027-flow-registry-absolute-flows-dir.md  028-flowstate-init-command.md  029-clear-error-no-flowstate-toml.md  030-host-warning-non-localhost.md  031-health-endpoint.md  032-serve-ui-from-importlib-resources.md  033-flow-routes-lumon-nested-shape.md
issues/shared/: 001-ast-definitions.md  002-project-setup.md  003-task-queue-model.md  004-mandatory-input-output.md  005-acp-harness-abstraction.md  006-project-layout-deployment-spec.md  007-project-contract.md  008-hatchling-ui-build-hook.md  009-lumon-optional-extra.md  010-pypi-release-metadata.md  011-deployment-docs.md  012-lumon-config-dataclass.md
issues/sprints/: sprint-001.md  sprint-022.md  sprint-023.md  sprint-023b.md  sprint-037.md  sprint-phase-31-1.md  sprint-phase-31-2.md  sprint-phase-31-3.md  sprint-phase-32.md
issues/state/: 001-schema.md  002-models.md  003-repository-flows.md  004-repository-tasks.md  005-repository-forks-logs.md  006-repository-scheduling.md  008-task-scheduling-columns.md  009-add-user-input-log-type.md  010-agent-subtasks.md  011-task-artifact-storage.md  012-per-project-db-path.md  013-flow-runs-source-branch.md
issues/ui/: 001-scaffold.md  002-dark-theme.md  003-sidebar.md  004-graph-viz.md  005-node-component.md  006-log-viewer.md  007-control-panel.md  008-websocket-hooks.md  009-api-client.md  010-flow-library.md  011-run-detail.md  012-start-run-modal.md  013-error-banner.md  014-flow-watcher-hook.md  015-start-run-id-mismatch.md  015-tool-call-rendering.md  017-run-history.md  (+68 more)
scripts/: verify_wheel_ui.sh
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+256 files in other folders)
