[project]
name = "flowstate"
version = "0.1.0"
description = "State-machine orchestration system for AI agents"
requires-python = ">=3.12"
dependencies = [
    "lark>=1.1",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "typer>=0.9",
    "croniter>=1.4",
    "watchfiles>=0.21",
]

[project.scripts]
flowstate = "flowstate.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowstate"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pyright>=1.1",
    "ruff>=0.4",
    "pre-commit>=3.7",
]
e2e = [
    "playwright>=1.58.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["flowstate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["src"]
